--- a/WebContent/html/acceuil.html
+++ b/WebContent/html/acceuil.html
@@ -6,10 +6,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Index</title>
+    <title>Acceuil</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+    <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,14 +35,16 @@
       </div>
     </nav>
 
+    <!-- titre -->
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Liste des enchères</h1>
+          <h1>Acceuil</h1>
         </div>
       </div>
     </div>
 
+    <!-- Main content -->
     <div classe="container">
       <div class="row" style="margin:2rem;">
         <div class="col">
