--- a/WebContent/html/compte_authentification.html
+++ b/WebContent/html/compte_authentification.html
@@ -6,10 +6,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Index</title>
+    <title>Authentification</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+    <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,24 +20,34 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Enchères</a>
+            <a class="nav-link" href="./index.html">Encheres</a>
           </li>
         </ul>
       </div>
     </nav>
 
+    <!-- titre -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+          <h1>Authentification</h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main content -->
     <div class="container">
       <div class="row justify-content-md-center" style="padding:2rem;">
         <div class="col col-lg-8">
           <form>
             <div class="form-group row">
-              <label for="staticEmail" class="col-sm-2 col-form-label">Identifiant : </label>
+              <label class="col-sm-2 col-form-label">Identifiant : </label>
               <div class="col-sm-9">
                 <input type="text" class="form-control" placeholder="Identifiant">
               </div>
             </div>
             <div class="form-group row">
-              <label for="inputPassword" class="col-sm-2 col-form-label">Password : </label>
+              <label class="col-sm-2 col-form-label">Password : </label>
               <div class="col-sm-9">
                 <input type="password" class="form-control" placeholder="Password">
               </div>
@@ -51,16 +62,31 @@
         <div class="col col-lg-8">
           <div class="row">
             <div class="col-6">
-
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Connexion</button>
             </div>
             <div class="col-6">
-              
+              <div class="row">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox"> <!--  value="" -->
+                  <label class="form-check-label">
+                    Se souvenir de moi
+                  </label>
+                </div>
+              </div>
+              <div class="row">
+                <a href="#">Mot de passe oublié</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <button class="btn btn-outline-success" type="submit">Créer un compte</button>
+      </div>
+    </div>
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
