--- a/WebContent/html/compte_profile.html
+++ b/WebContent/html/compte_profile.html
@@ -6,10 +6,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Index</title>
+    <title>Profil utilisateur</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+    <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +35,7 @@
       </div>
     </nav>
 
+    <!-- titre -->
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
@@ -41,6 +43,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Main content -->
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
