--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+    <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,6 +26,7 @@
       </div>
     </nav>
 
+    <!-- titre -->
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
@@ -33,6 +35,7 @@
       </div>
     </div>
 
+    <!-- Main content -->
     <div classe="container">
       <div class="row" style="margin:2rem;">
         <div class="col">
