--- a/WebContent/html/compte_edition(8).html
+++ b/WebContent/html/compte_edition(8).html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+
+    <!-- JSON responce -->
+    <!--
+
+
+
+    -->
+
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#">ENI-Encheres</a>
