--- a/WebContent/html/compte_authentification(2).html
+++ b/WebContent/html/compte_authentification(2).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">ENI-Encheres</a>
+      <a class="navbar-brand" href="./index(1).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Encheres</a>
+            <a class="nav-link" href="./index(1).html">Encheres</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
         <div class="col col-lg-8">
           <div class="row">
             <div class="col-6">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Connexion</button>
+              <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
             </div>
             <div class="col-6">
               <div class="row">
@@ -92,7 +92,7 @@
 
     <div class="container">
       <div class="row justify-content-md-center">
-        <button class="btn btn-outline-success" type="submit">Créer un compte</button>
+        <a href="./compte_creation(3).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer un compte</a>
       </div>
     </div>
 
