--- a/WebContent/html/compte_mon_profil(7).html
+++ b/WebContent/html/compte_mon_profil(7).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">ENI-Encheres</a>
+      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Enchères</a>
+            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Vender un article</a>
+            <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Déconnexion</a>
+            <a class="nav-link" href="./index(1).html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -53,10 +53,71 @@
     </div>
 
     <!-- Main content -->
+    <div class="container">
+      <div class="row justify-content-md-center" style="padding:2rem;">
+        <div class="col col-lg-8">
+          <div class="row justify-content-md-center">
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Pseudo : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_pseudo"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Nom : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_nom"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Prénom : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_prenom"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Email : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_email"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Téléphone : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_telephone"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Rue : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_rue"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Code postal : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_code_postal"></div>
+            </div>
+            <div class="col-sm-4 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <h6>Ville : </h6>
+            </div>
+            <div class="col-sm-8 d-flex align-items-center flex-column" style="margin-top:1rem;">
+              <div id="id_ville"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <a href="./compte_edition(8).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Modifier</a>
+    </div>
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../js/compte_mon_profil.js"></script>
   </body>
 </html>
