--- a/WebContent/html/enchere_nouveau(9).html
+++ b/WebContent/html/enchere_nouveau(9).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">ENI-Encheres</a>
+      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Enchères</a>
+            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Vender un article</a>
+            <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Déconnexion</a>
+            <a class="nav-link" href="./index(1).html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -47,12 +47,119 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Nouveau troc</h1>
+          <h1>Nouvelle vente</h1>
         </div>
       </div>
     </div>
 
     <!-- Main content -->
+    <div class="row justify-content-md-center" style="margin-top:2rem;">
+      <div class="col col-lg-3">
+        <img src="../img/chat.jpeg">
+      </div>
+
+      <div class="col col-lg-7">
+        <form>
+
+          <div class="form-group row">
+            <div class="col">
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Article : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Article">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Description : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Description">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Categorie : </label>
+                <div class="col-sm-8">
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>cat 1</option>
+                    <option>cat 2</option>
+                    <option>cat 3</option>
+                    <option>cat 4</option>
+                    <option>cat 5</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Photo de l'article : </label>
+                <div class="col-sm-8">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">UPLOADER</button>
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Mise à prix : </label>
+                <div class="col-sm-8">
+                  <input type="number" class="form-control" placeholder="0">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
+                <div class="col-sm-8">
+                  <input type="date" class="form-control">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
+                <div class="col-sm-8">
+                  <input type="date" class="form-control">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center" style="margin-top:2rem;">
+      <div class="col-8">
+        <h5>Retrait</h5>
+        <form>
+
+          <div class="form-group row">
+            <div class="col">
+
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Rue : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Rue">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Code postal : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Code postal">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Ville : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Ville  ">
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6 d-flex align-items-end flex-column">
+        <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
+      </div>
+      <div class="col-6">
+        <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
+      </div>
+    </div>
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
