--- a/WebContent/html/enchere_resultat_gagne(13).html
+++ b/WebContent/html/enchere_resultat_gagne(13).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">ENI-Encheres</a>
+      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,16 +28,16 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Enchères</a>
+            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Vender un article</a>
+            <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Mon profil</a>
+            <a class="nav-link" href="./compte_mon_profil(7).html">Mon profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./compte_authentification.html">Déconnexion</a>
+            <a class="nav-link" href="./index(1).html">Déconnexion</a>
           </li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h1>Vous avez remporté l'enchère ! </h1></br>
-            <h1>Bravo</h1>
+          <h1>Bravo</h1>
         </div>
       </div>
     </div>
