ihm first version

--- a/WebContent/html/compte_authentification(2).html
+++ b/WebContent/html/compte_authentification(2).html
@@ -70,7 +70,7 @@
         <div class="col col-lg-8">
           <div class="row">
             <div class="col-6">
-              <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
+              <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
             </div>
             <div class="col-6">
               <div class="row">
