--- a/WebContent/html/compte_mon_profil(7).html
+++ b/WebContent/html/compte_mon_profil(7).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
