--- a/WebContent/html/enchere_nouveau(9).html
+++ b/WebContent/html/enchere_nouveau(9).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
@@ -90,7 +90,7 @@
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Photo de l'article : </label>
                 <div class="col-sm-8">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">UPLOADER</button>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" disabled>UPLOADER</button>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -154,10 +154,10 @@
 
     <div class="row">
       <div class="col-6 d-flex align-items-end flex-column">
-        <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
       </div>
       <div class="col-6">
-        <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
       </div>
     </div>
 
