--- a/WebContent/html/enchere_resultat_perdu(12).html
+++ b/WebContent/html/enchere_resultat_perdu(12).html
@@ -20,7 +20,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./acceuil(4-5).html">ENI-Encheres</a>
+      <a class="navbar-brand" href="./accueil(4-5).html">ENI-Encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./acceuil(4-5).html">Enchères</a>
+            <a class="nav-link" href="./accueil(4-5).html">Enchères</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./enchere_nouveau(9).html">Vender un article</a>
@@ -47,19 +47,72 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <!--div id="gagant"></div-->
-          <h1>a remporté l'enchère</h1></br>
-          <h1>Desolé..</h1>
-
+          <h1><div id="gagant"></div> a remporté l'enchère</h1>
         </div>
       </div>
     </div>
 
     <!-- Main content -->
+    <div class="row justify-content-md-center" style="margin-top:2rem;">
+      <div class="col col-lg-3">
+        <img src="../img/chat.jpeg">
+      </div>
+
+      <div class="col col-lg-7">
+        <div class="row" style="margin:1rem;">
+          <div id="inputArticle"></div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Description : </label>
+          <div class="col-sm-8">
+            <div id="inputDescription"></div>
+          </div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Meilleur offre : </label>
+          <div class="col-sm-8">
+            <div id="inputMeilleurOffre"></div>
+          </div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Mise à prix : </label>
+          <div class="col-sm-8">
+            <div id="inputMiseAPrix"></div>
+          </div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
+          <div class="col-sm-8">
+            <div id="inputDateFin"></div>
+          </div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Retrait : </label>
+          <div class="col-sm-8">
+            <div id="inputRetrait"></div>
+          </div>
+        </div>
+        <div class="row" style="margin:1rem;">
+          <label class="col-sm-4 col-form-label">Vendeur : </label>
+          <div class="col-sm-8">
+            <div id="inputVendeur"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-4">
+        <div class="row justify-content-md-center">
+          <a href="./accueil.htlm" class="btn btn-outline-success my-2 my-sm-0" role="button">Retrait effectué</a>
+        </div>
+      </div>
+    </div>
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../js/enchere_resultat_perdu.js"></script>
   </body>
 </html>
