--- a/WebContent/html/index(1).html
+++ b/WebContent/html/index(1).html
@@ -78,9 +78,131 @@
       </div>
     </div>
 
+    <div id="enchereToPrint"></div>
 
-    <!-- dynamic -->
-    <!--div id="test"></div-->
+    <!--<div class="container" style="max-width:100%;">
+      <div class="row justify-content-md-center">
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center" style="margin-top:2rem;">
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: auto;">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <img src="../img/chat.jpeg">
+                </div>
+                <div class="col-8">
+                  <a href="#" class="card-link">
+                    <h5 class="card-title">PC gamer pour travailler</h5>
+                  </a>
+                  <p class="card-text">Prix: 210 points</p>
+                  <p class="card-text">Fin de l'enchère: 10/08/2018</p>
+                  <p class="card-text">Vendeur : jojo44</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>-->
 
     <!-- export -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
