refactor IHM archi

--- a/WebContent/public/html/enchere_nouveau(9).html
+++ b/WebContent/public/html/enchere_nouveau(9).html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Creation de compte</title>
+    <title>Nouveau troc</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
@@ -44,107 +44,71 @@
     </nav>
 
     <!-- titre -->
-    <div class="row justify-content-md-center">
-      <div class="col-md-auto">
-        <h1>Création de compte</h1>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+          <h1>Nouvelle vente</h1>
+        </div>
       </div>
     </div>
 
     <!-- Main content -->
     <div class="row justify-content-md-center" style="margin-top:2rem;">
-      <div class="col col-lg-8">
+      <div class="col col-lg-3">
+        <img src="../img/chat.jpeg">
+      </div>
+
+      <div class="col col-lg-7">
         <form>
 
           <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Pseudo : </label>
+            <div class="col">
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Article : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Pseudo">
+                  <input type="text" class="form-control" placeholder="Article">
                 </div>
               </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Nom : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Description : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Nom">
+                  <input type="text" class="form-control" placeholder="Description">
                 </div>
               </div>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Prénom : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Categorie : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Prenom">
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>cat 1</option>
+                    <option>cat 2</option>
+                    <option>cat 3</option>
+                    <option>cat 4</option>
+                    <option>cat 5</option>
+                  </select>
                 </div>
               </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Email : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Photo de l'article : </label>
                 <div class="col-sm-8">
-                  <input type="email" class="form-control" placeholder="Email">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" disabled>UPLOADER</button>
                 </div>
               </div>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Téléphone : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Mise à prix : </label>
                 <div class="col-sm-8">
-                  <input type="tel" class="form-control" placeholder="Telephone">
+                  <input type="number" class="form-control" placeholder="0">
                 </div>
               </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Rue : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Rue">
+                  <input type="date" class="form-control">
                 </div>
               </div>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Code postal : </label>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Code postal">
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Ville : </label>
-                <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Ville">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Mot de passe : </label>
-                <div class="col-sm-8">
-                  <input type="password" class="form-control" placeholder="Mot de passe">
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Confirmation : </label>
-                <div class="col-sm-8">
-                  <input type="password" class="form-control" placeholder="Confirmation">
+                  <input type="date" class="form-control">
                 </div>
               </div>
             </div>
@@ -154,13 +118,46 @@
       </div>
     </div>
 
+    <div class="row justify-content-md-center" style="margin-top:2rem;">
+      <div class="col-8">
+        <h5>Retrait</h5>
+        <form>
+
+          <div class="form-group row">
+            <div class="col">
+
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Rue : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Rue">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Code postal : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Code postal">
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Ville : </label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" placeholder="Ville  ">
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-6 d-flex align-items-end flex-column">
-        <!-- Enregistrer en base -->
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
       </div>
       <div class="col-6">
-        <a href="./index(1).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
       </div>
     </div>
 
@@ -168,5 +165,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../js/tools/logger.js"></script>
+    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/enchere_nouveau.js"></script>
   </body>
 </html>
