--- a/WebContent/public/html/compte_creation(3).html
+++ b/WebContent/public/html/compte_creation(3).html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Edition de compte</title>
+    <title>Creation de compte</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
@@ -44,11 +44,9 @@
     </nav>
 
     <!-- titre -->
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h1>Edition de compte</h1>
-        </div>
+    <div class="row justify-content-md-center">
+      <div class="col-md-auto">
+        <h1>Création de compte</h1>
       </div>
     </div>
 
@@ -62,7 +60,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Pseudo : </label>
                 <div class="col-sm-8">
-                  <div id="inputPseudo"></div>
+                  <input type="text" class="form-control" placeholder="Pseudo">
                 </div>
               </div>
             </div>
@@ -70,7 +68,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Nom : </label>
                 <div class="col-sm-8">
-                  <div id="inputNom"></div>
+                  <input type="text" class="form-control" placeholder="Nom">
                 </div>
               </div>
             </div>
@@ -81,7 +79,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Prénom : </label>
                 <div class="col-sm-8">
-                  <div id="inputPrenom"></div>
+                  <input type="text" class="form-control" placeholder="Prenom">
                 </div>
               </div>
             </div>
@@ -89,7 +87,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Email : </label>
                 <div class="col-sm-8">
-                  <div id="inputEmail"></div>
+                  <input type="email" class="form-control" placeholder="Email">
                 </div>
               </div>
             </div>
@@ -100,7 +98,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Téléphone : </label>
                 <div class="col-sm-8">
-                  <div id="inputTelephone"></div>
+                  <input type="tel" class="form-control" placeholder="Telephone">
                 </div>
               </div>
             </div>
@@ -108,7 +106,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Rue : </label>
                 <div class="col-sm-8">
-                  <div id="inputRue"></div>
+                  <input type="text" class="form-control" placeholder="Rue">
                 </div>
               </div>
             </div>
@@ -119,7 +117,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Code postal : </label>
                 <div class="col-sm-8">
-                  <div id="inputCodePostal"></div>
+                  <input type="text" class="form-control" placeholder="Code postal">
                 </div>
               </div>
             </div>
@@ -127,7 +125,7 @@
               <div class="row">
                 <label class="col-sm-4 col-form-label">Ville : </label>
                 <div class="col-sm-8">
-                  <div id="inputVille"></div>
+                  <input type="text" class="form-control" placeholder="Ville">
                 </div>
               </div>
             </div>
@@ -136,23 +134,9 @@
           <div class="form-group row">
             <div class="col-6">
               <div class="row">
-                <label class="col-sm-4 col-form-label">Mot de passe actuel : </label>
+                <label class="col-sm-4 col-form-label">Mot de passe : </label>
                 <div class="col-sm-8">
-                  <div id="inputMotDePasse"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Nouveau mot de passe : </label>
-                <div class="col-sm-8">
-                  <input type="password" class="form-control" placeholder="Nouveau mot de passe">
+                  <input type="password" class="form-control" placeholder="Mot de passe">
                 </div>
               </div>
             </div>
@@ -170,23 +154,13 @@
       </div>
     </div>
 
-    <div class="row justify-content-md-center" style="margin-top:1rem;">
-      <div class="col-1">
-        <h6>Crédit : </h6>
-      </div>
-      <div class="col-3">
-        <div id="id_credit"></div>
-      </div>
-    </div>
-
-    <div class="row" style="margin-top:1rem;">
+    <div class="row">
       <div class="col-6 d-flex align-items-end flex-column">
         <!-- Enregistrer en base -->
         <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
       </div>
       <div class="col-6">
-        <!-- Supprimer en base -->
-        <a href="./index(1).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Supprimer mon compte</a>
+        <a href="./index(1).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
       </div>
     </div>
 
@@ -194,6 +168,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/compte_edition.js"></script>
+    <script src="../js/tools/logger.js"></script>
+    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/compte_creation.js"></script>
   </body>
 </html>
