--- a/WebContent/public/html/compte_edition(8).html
+++ b/WebContent/public/html/compte_edition(8).html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Nouveau troc</title>
+    <title>Edition de compte</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
@@ -47,104 +47,122 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Nouvelle vente</h1>
+          <h1>Edition de compte</h1>
         </div>
       </div>
     </div>
 
     <!-- Main content -->
     <div class="row justify-content-md-center" style="margin-top:2rem;">
-      <div class="col col-lg-3">
-        <img src="../img/chat.jpeg">
-      </div>
-
-      <div class="col col-lg-7">
+      <div class="col col-lg-8">
         <form>
 
           <div class="form-group row">
-            <div class="col">
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Article : </label>
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Pseudo : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Article">
+                  <div id="compteEditionInputPseudo"></div>
                 </div>
               </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Description : </label>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Nom : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Description">
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Categorie : </label>
-                <div class="col-sm-8">
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>cat 1</option>
-                    <option>cat 2</option>
-                    <option>cat 3</option>
-                    <option>cat 4</option>
-                    <option>cat 5</option>
-                  </select>
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Photo de l'article : </label>
-                <div class="col-sm-8">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" disabled>UPLOADER</button>
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Mise à prix : </label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" placeholder="0">
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
-                <div class="col-sm-8">
-                  <input type="date" class="form-control">
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
-                <div class="col-sm-8">
-                  <input type="date" class="form-control">
+                  <div id="compteEditionInputNom"></div>
                 </div>
               </div>
             </div>
           </div>
 
-        </form>
-      </div>
-    </div>
-
-    <div class="row justify-content-md-center" style="margin-top:2rem;">
-      <div class="col-8">
-        <h5>Retrait</h5>
-        <form>
+          <div class="form-group row">
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Prénom : </label>
+                <div class="col-sm-8">
+                  <div id="compteEditionInputPrenom"></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Email : </label>
+                <div class="col-sm-8">
+                  <div id="compteEditionInputEmail"></div>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="form-group row">
-            <div class="col">
-
-              <div class="row" style="margin:1rem;">
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Téléphone : </label>
+                <div class="col-sm-8">
+                  <div id="compteEditionInputTelephone"></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="row">
                 <label class="col-sm-4 col-form-label">Rue : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Rue">
+                  <div id="compteEditionInputRue"></div>
                 </div>
               </div>
-              <div class="row" style="margin:1rem;">
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col-6">
+              <div class="row">
                 <label class="col-sm-4 col-form-label">Code postal : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Code postal">
+                  <div id="compteEditionInputCodePostal"></div>
                 </div>
               </div>
-              <div class="row" style="margin:1rem;">
+            </div>
+            <div class="col-6">
+              <div class="row">
                 <label class="col-sm-4 col-form-label">Ville : </label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" placeholder="Ville  ">
+                  <div id="compteEditionInputVille"></div>
                 </div>
               </div>
+            </div>
+          </div>
 
+          <div class="form-group row">
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Mot de passe actuel : </label>
+                <div class="col-sm-8">
+                  <div id="compteEditionInputMotDePasse"></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Nouveau mot de passe : </label>
+                <div class="col-sm-8">
+                  <input type="password" class="form-control" placeholder="Nouveau mot de passe">
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <label class="col-sm-4 col-form-label">Confirmation : </label>
+                <div class="col-sm-8">
+                  <input type="password" class="form-control" placeholder="Confirmation">
+                </div>
+              </div>
             </div>
           </div>
 
@@ -152,12 +170,23 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-md-center" style="margin-top:1rem;">
+      <div class="col-1">
+        <h6>Crédit : </h6>
+      </div>
+      <div class="col-3">
+        <div id="compteEditionCredit"></div>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top:1rem;">
       <div class="col-6 d-flex align-items-end flex-column">
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Créer</a>
+        <!-- Enregistrer en base -->
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
       </div>
       <div class="col-6">
-        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
+        <!-- Supprimer en base -->
+        <a href="./index(1).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Supprimer mon compte</a>
       </div>
     </div>
 
@@ -165,5 +194,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../js/tools/logger.js"></script>
+    <script src="../js/tools/htmlBuilder.js"></script>
+    <script src="../js/compte_edition.js"></script>
   </body>
 </html>
