--- a/WebContent/public/html/enchere_edition(10).html
+++ b/WebContent/public/html/enchere_edition(10).html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Detail d'une enchere</title>
+    <title>Edition d'une enchere</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Detail d'une enchere</h1>
+          <h1>Edition d'une enchere</h1>
         </div>
       </div>
     </div>
@@ -64,7 +64,10 @@
           <div class="form-group row">
             <div class="col">
               <div class="row" style="margin:1rem;">
-                <div id="inputArticle"></div>
+                <label class="col-sm-4 col-form-label">Article : </label>
+                <div class="col-sm-8">
+                  <div id="inputArticle"></div>
+                </div>
               </div>
               <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Description : </label>
@@ -79,9 +82,9 @@
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Meilleur offre : </label>
+                <label class="col-sm-4 col-form-label">Photo de l'article : </label>
                 <div class="col-sm-8">
-                  <div id="inputMeilleurOffre"></div>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" disabled>UPLOADER</button>
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
@@ -91,21 +94,15 @@
                 </div>
               </div>
               <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Debut de l'enchère : </label>
+                <div class="col-sm-8">
+                  <div id="inputDateDebut"></div>
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
                 <label class="col-sm-4 col-form-label">Fin de l'enchère : </label>
                 <div class="col-sm-8">
                   <div id="inputDateFin"></div>
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Retrait : </label>
-                <div class="col-sm-8">
-                  <div id="inputRetrait"></div>
-                </div>
-              </div>
-              <div class="row" style="margin:1rem;">
-                <label class="col-sm-4 col-form-label">Vendeur : </label>
-                <div class="col-sm-8">
-                  <div id="inputVendeur"></div>
                 </div>
               </div>
             </div>
@@ -115,19 +112,45 @@
       </div>
     </div>
 
+    <div class="row justify-content-md-center" style="margin-top:2rem;">
+      <div class="col-8">
+        <h5>Retrait</h5>
+        <form>
+
+          <div class="form-group row">
+            <div class="col">
+
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Rue : </label>
+                <div class="col-sm-8">
+                  <div id="inputRue"></div>
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Code postal : </label>
+                <div class="col-sm-8">
+                  <div id="inputCodePostal"></div>
+                </div>
+              </div>
+              <div class="row" style="margin:1rem;">
+                <label class="col-sm-4 col-form-label">Ville : </label>
+                <div class="col-sm-8">
+                  <div id="inputVille"></div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+
     <div class="row justify-content-md-center">
       <div class="col-4">
-        <div class="row">
-          <label class="col-sm-4 col-form-label">Ma proposition : </label>
-          <div class="col-sm-8">
-            <input type="number" class="form-control" placeholder="0">
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="row justify-content-md-center">
-          <a href="#" class="btn btn-outline-success my-2 my-sm-0" role="button">Enchérir</a>
-        </div>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler</a>
+        <a href="./accueil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Annuler la vente</a>
       </div>
     </div>
 
@@ -135,6 +158,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/enchere_details.js"></script>
+    <script src="../js/tools/logger.js"></script>
+    <script src="../js/tools/htmlBuiler.js"></script>
+    <script src="../js/enchere_edition.js"></script>
   </body>
 </html>
